--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BMSIT Scanner</string>
+    <string name="college_name">BMS Institute of Technology and Management</string>
+    <string name="scan">SCAN</string>
+    <string name="complain">COMPLAIN</string>
 </resources>
